assm_parser.js
var Assm = Assm || {};
Assm.parser = (function(){
  /*
   * Generated by PEG.js 0.7.0.
   *
   * http://pegjs.majda.cz/
   */
  
  function quote(s) {
    /*
     * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
     * string literal except for the closing quote character, backslash,
     * carriage return, line separator, paragraph separator, and line feed.
     * Any character may appear in the form of an escape sequence.
     *
     * For portability, we also escape escape all control and non-ASCII
     * characters. Note that "\0" and "\v" escape sequences are not used
     * because JSHint does not like the first and IE the second.
     */
     return '"' + s
      .replace(/\\/g, '\\\\')  // backslash
      .replace(/"/g, '\\"')    // closing quote character
      .replace(/\x08/g, '\\b') // backspace
      .replace(/\t/g, '\\t')   // horizontal tab
      .replace(/\n/g, '\\n')   // line feed
      .replace(/\f/g, '\\f')   // form feed
      .replace(/\r/g, '\\r')   // carriage return
      .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
      + '"';
  }
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "start": parse_start,
        "lins": parse_lins,
        "ins": parse_ins,
        "dat": parse_dat,
        "op": parse_op,
        "set": parse_set,
        "add": parse_add,
        "sub": parse_sub,
        "mul": parse_mul,
        "mli": parse_mli,
        "div": parse_div,
        "dvi": parse_dvi,
        "mod": parse_mod,
        "mdi": parse_mdi,
        "and": parse_and,
        "bor": parse_bor,
        "xor": parse_xor,
        "shr": parse_shr,
        "asr": parse_asr,
        "shl": parse_shl,
        "ifb": parse_ifb,
        "ifc": parse_ifc,
        "ife": parse_ife,
        "ifn": parse_ifn,
        "ifg": parse_ifg,
        "ifa": parse_ifa,
        "ifl": parse_ifl,
        "ifu": parse_ifu,
        "adx": parse_adx,
        "sbx": parse_sbx,
        "sti": parse_sti,
        "std": parse_std,
        "sop": parse_sop,
        "jsr": parse_jsr,
        "hcf": parse_hcf,
        "int": parse_int,
        "iag": parse_iag,
        "ias": parse_ias,
        "rfi": parse_rfi,
        "iaq": parse_iaq,
        "hwn": parse_hwn,
        "hwq": parse_hwq,
        "hwi": parse_hwi,
        "value": parse_value,
        "avalue": parse_avalue,
        "bvalue": parse_bvalue,
        "pop": parse_pop,
        "push": parse_push,
        "peek": parse_peek,
        "pick": parse_pick,
        "label": parse_label,
        "labelref": parse_labelref,
        "regoff": parse_regoff,
        "regref": parse_regref,
        "reg": parse_reg,
        "numref": parse_numref,
        "num": parse_num,
        "decnum": parse_decnum,
        "hexnum": parse_hexnum,
        "SourceChar": parse_SourceChar,
        "LineChar": parse_LineChar,
        "EOLChar": parse_EOLChar,
        "SpaceChar": parse_SpaceChar,
        "LabelChar": parse_LabelChar,
        "CommentChar": parse_CommentChar,
        "Comment": parse_Comment,
        "ws": parse_ws,
        "eol": parse_eol,
        "string": parse_string,
        "s_char": parse_s_char,
        "d_char": parse_d_char,
        "escape": parse_escape,
        "single_escape_char": parse_single_escape_char,
        "non_escape_char": parse_non_escape_char,
        "hex_escape": parse_hex_escape,
        "unicode_escape": parse_unicode_escape,
        "hex": parse_hex
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "start";
      }
      
      var pos = 0;
      var reportFailures = 0;
      var rightmostFailuresPos = 0;
      var rightmostFailuresExpected = [];
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        var escapeChar;
        var length;
        
        if (charCode <= 0xFF) {
          escapeChar = 'x';
          length = 2;
        } else {
          escapeChar = 'u';
          length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function matchFailed(failure) {
        if (pos < rightmostFailuresPos) {
          return;
        }
        
        if (pos > rightmostFailuresPos) {
          rightmostFailuresPos = pos;
          rightmostFailuresExpected = [];
        }
        
        rightmostFailuresExpected.push(failure);
      }
      
      function parse_start() {
        var result0, result1, result2;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_ws();
        if (result0 !== null) {
          result1 = [];
          result2 = parse_lins();
          while (result2 !== null) {
            result1.push(result2);
            result2 = parse_lins();
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, i) {
              var dump = [];
              var labels = {};
              for (var j = 0; j < i.length; ++j) {
                var ins = i[j];
        
                if (ins.labels) {
                  for (var k = ins.labels.length - 1; k >= 0; --k) {
                    labels[ins.labels[k]] = dump.length;
                  }
                }
        
                if (ins.type === 'data') {
                  dump = dump.concat(ins.val);
                  continue;
                }
        
                var a_val = null;
                var a_next = false;
                var b_val = null;
                var b_next = false;
                if (ins.a.type === 'label') {
                  a_val = labels[ins.a.val] || ins.a.val;
                  ins.a.code = 0x1f;
                  a_next = true;
                  if (typeof a_val === 'number' && a_val <= 30) {
                    ins.a.code = a_val + 0x21;
                    a_next = false;
                  }
                } else if (ins.a.type === 'labelref') {
                  a_val = labels[ins.a.val] || ins.a.val;
                  ins.a.code = 0x1e;
                  a_next = true;
                } else if (ins.b.type === 'labelref') {
                  b_val = labels[ins.b.val] || ins.b.val;
                  ins.b.code = 0x1e;
                  b_next = true;
                }
        
                var size = 1;
                ins.code = ins.op.code + (ins.a.code << 10) + (ins.b.code << 5);
                dump.push(ins.code);
        
                if (a_next) {
                  dump.push(a_val);
                  size++;
                }
                if (b_next) {
                  dump.push(b_val);
                  size++;
                }
        
                if (   ins.a.type === 'numref'
                    || ins.a.type === 'num'
                    || ins.a.type === 'regoff') {
                  dump.push(ins.a.val);
                  size++;
                }
        
                if (   ins.b.type === 'numref'
                    || ins.b.type === 'num'
                    || ins.b.type === 'regoff') {
                  dump.push(ins.b.val);
                  size++;
                }
        
                ins.size = size;
              }
        
              for (var j = 0; j < dump.length; ++j) {
                if (typeof dump[j] === 'string') {
                  dump[j] = labels[dump[j]];
                }
              }
        
              return {dump: dump,
                      labels: labels,
                      ins: i};
            })(pos0, result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_lins() {
        var result0, result1, result2, result3;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        result0 = [];
        pos2 = pos;
        result1 = parse_ws();
        if (result1 !== null) {
          if (input.charCodeAt(pos) === 58) {
            result2 = ":";
            pos++;
          } else {
            result2 = null;
            if (reportFailures === 0) {
              matchFailed("\":\"");
            }
          }
          if (result2 !== null) {
            result3 = parse_label();
            if (result3 !== null) {
              result1 = [result1, result2, result3];
            } else {
              result1 = null;
              pos = pos2;
            }
          } else {
            result1 = null;
            pos = pos2;
          }
        } else {
          result1 = null;
          pos = pos2;
        }
        while (result1 !== null) {
          result0.push(result1);
          pos2 = pos;
          result1 = parse_ws();
          if (result1 !== null) {
            if (input.charCodeAt(pos) === 58) {
              result2 = ":";
              pos++;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\":\"");
              }
            }
            if (result2 !== null) {
              result3 = parse_label();
              if (result3 !== null) {
                result1 = [result1, result2, result3];
              } else {
                result1 = null;
                pos = pos2;
              }
            } else {
              result1 = null;
              pos = pos2;
            }
          } else {
            result1 = null;
            pos = pos2;
          }
        }
        if (result0 !== null) {
          result1 = parse_ins();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, l, i) { for (var j = l.length - 1; j >= 0; --j) {
                l[j] = l[j][2].val;
              }
              if (l.length > 0) {
                i.labels = l;
              }
              return i;
            })(pos0, result0[0], result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_ins() {
        var result0, result1, result2, result3, result4, result5, result6, result7, result8;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_ws();
        if (result0 !== null) {
          result1 = parse_op();
          if (result1 !== null) {
            result2 = parse_ws();
            if (result2 !== null) {
              result3 = parse_bvalue();
              if (result3 !== null) {
                result4 = parse_ws();
                if (result4 !== null) {
                  if (input.charCodeAt(pos) === 44) {
                    result5 = ",";
                    pos++;
                  } else {
                    result5 = null;
                    if (reportFailures === 0) {
                      matchFailed("\",\"");
                    }
                  }
                  result5 = result5 !== null ? result5 : "";
                  if (result5 !== null) {
                    result6 = parse_ws();
                    if (result6 !== null) {
                      result7 = parse_avalue();
                      if (result7 !== null) {
                        result8 = parse_ws();
                        if (result8 !== null) {
                          result0 = [result0, result1, result2, result3, result4, result5, result6, result7, result8];
                        } else {
                          result0 = null;
                          pos = pos1;
                        }
                      } else {
                        result0 = null;
                        pos = pos1;
                      }
                    } else {
                      result0 = null;
                      pos = pos1;
                    }
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, o, b, a) { return {op: o, b: b, a: a}; })(pos0, result0[1], result0[3], result0[7]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        if (result0 === null) {
          pos0 = pos;
          pos1 = pos;
          result0 = parse_ws();
          if (result0 !== null) {
            result1 = parse_sop();
            if (result1 !== null) {
              result2 = parse_ws();
              if (result2 !== null) {
                result3 = parse_avalue();
                if (result3 !== null) {
                  result4 = parse_ws();
                  if (result4 !== null) {
                    result0 = [result0, result1, result2, result3, result4];
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
          if (result0 !== null) {
            result0 = (function(offset, o, a) { return {op: {type: 'special', code: 0},
                        a: a,
                        b: o}; })(pos0, result0[1], result0[3]);
          }
          if (result0 === null) {
            pos = pos0;
          }
          if (result0 === null) {
            pos0 = pos;
            pos1 = pos;
            result0 = parse_ws();
            if (result0 !== null) {
              result1 = parse_dat();
              if (result1 !== null) {
                result2 = parse_ws();
                if (result2 !== null) {
                  result0 = [result0, result1, result2];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
            if (result0 !== null) {
              result0 = (function(offset, d) { return {type: 'data', val: d}; })(pos0, result0[1]);
            }
            if (result0 === null) {
              pos = pos0;
            }
          }
        }
        return result0;
      }
      
      function parse_dat() {
        var result0, result1, result2, result3, result4, result5, result6, result7, result8;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        if (/^[Dd]/.test(input.charAt(pos))) {
          result0 = input.charAt(pos);
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("[Dd]");
          }
        }
        if (result0 !== null) {
          if (/^[Aa]/.test(input.charAt(pos))) {
            result1 = input.charAt(pos);
            pos++;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("[Aa]");
            }
          }
          if (result1 !== null) {
            if (/^[Tt]/.test(input.charAt(pos))) {
              result2 = input.charAt(pos);
              pos++;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("[Tt]");
              }
            }
            if (result2 !== null) {
              result3 = parse_ws();
              if (result3 !== null) {
                pos2 = pos;
                result5 = parse_num();
                if (result5 === null) {
                  result5 = parse_string();
                }
                if (result5 !== null) {
                  result6 = parse_ws();
                  if (result6 !== null) {
                    if (input.charCodeAt(pos) === 44) {
                      result7 = ",";
                      pos++;
                    } else {
                      result7 = null;
                      if (reportFailures === 0) {
                        matchFailed("\",\"");
                      }
                    }
                    result7 = result7 !== null ? result7 : "";
                    if (result7 !== null) {
                      result8 = parse_ws();
                      if (result8 !== null) {
                        result5 = [result5, result6, result7, result8];
                      } else {
                        result5 = null;
                        pos = pos2;
                      }
                    } else {
                      result5 = null;
                      pos = pos2;
                    }
                  } else {
                    result5 = null;
                    pos = pos2;
                  }
                } else {
                  result5 = null;
                  pos = pos2;
                }
                if (result5 !== null) {
                  result4 = [];
                  while (result5 !== null) {
                    result4.push(result5);
                    pos2 = pos;
                    result5 = parse_num();
                    if (result5 === null) {
                      result5 = parse_string();
                    }
                    if (result5 !== null) {
                      result6 = parse_ws();
                      if (result6 !== null) {
                        if (input.charCodeAt(pos) === 44) {
                          result7 = ",";
                          pos++;
                        } else {
                          result7 = null;
                          if (reportFailures === 0) {
                            matchFailed("\",\"");
                          }
                        }
                        result7 = result7 !== null ? result7 : "";
                        if (result7 !== null) {
                          result8 = parse_ws();
                          if (result8 !== null) {
                            result5 = [result5, result6, result7, result8];
                          } else {
                            result5 = null;
                            pos = pos2;
                          }
                        } else {
                          result5 = null;
                          pos = pos2;
                        }
                      } else {
                        result5 = null;
                        pos = pos2;
                      }
                    } else {
                      result5 = null;
                      pos = pos2;
                    }
                  }
                } else {
                  result4 = null;
                }
                if (result4 !== null) {
                  result0 = [result0, result1, result2, result3, result4];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, d) {
              var data = [];
              for (var i = 0; i < d.length; ++i) {
                var dat = d[i][0];
                switch (dat.type) {
                  case 'num':
                    data.push(dat.val); break;
                  case 'string':
                    for (var j = 0; j < dat.val.length; ++j) {
                      var char = dat.val[j];
                      data.push(dat.val.charCodeAt(j));
                    }
                    //data.push(dat.val); break;
                }
              }
              return data;
            })(pos0, result0[4]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_op() {
        var result0;
        
        result0 = parse_set();
        if (result0 === null) {
          result0 = parse_add();
          if (result0 === null) {
            result0 = parse_sub();
            if (result0 === null) {
              result0 = parse_mul();
              if (result0 === null) {
                result0 = parse_mli();
                if (result0 === null) {
                  result0 = parse_div();
                  if (result0 === null) {
                    result0 = parse_dvi();
                    if (result0 === null) {
                      result0 = parse_mod();
                      if (result0 === null) {
                        result0 = parse_mdi();
                        if (result0 === null) {
                          result0 = parse_and();
                          if (result0 === null) {
                            result0 = parse_bor();
                            if (result0 === null) {
                              result0 = parse_xor();
                              if (result0 === null) {
                                result0 = parse_shr();
                                if (result0 === null) {
                                  result0 = parse_asr();
                                  if (result0 === null) {
                                    result0 = parse_shl();
                                    if (result0 === null) {
                                      result0 = parse_ifb();
                                      if (result0 === null) {
                                        result0 = parse_ifc();
                                        if (result0 === null) {
                                          result0 = parse_ife();
                                          if (result0 === null) {
                                            result0 = parse_ifn();
                                            if (result0 === null) {
                                              result0 = parse_ifg();
                                              if (result0 === null) {
                                                result0 = parse_ifa();
                                                if (result0 === null) {
                                                  result0 = parse_ifl();
                                                  if (result0 === null) {
                                                    result0 = parse_ifu();
                                                    if (result0 === null) {
                                                      result0 = parse_adx();
                                                      if (result0 === null) {
                                                        result0 = parse_sbx();
                                                        if (result0 === null) {
                                                          result0 = parse_sti();
                                                          if (result0 === null) {
                                                            result0 = parse_std();
                                                          }
                                                        }
                                                      }
                                                    }
                                                  }
                                                }
                                              }
                                            }
                                          }
                                        }
                                      }
                                    }
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
        return result0;
      }
      
      function parse_set() {
        var result0, result1, result2;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        if (/^[Ss]/.test(input.charAt(pos))) {
          result0 = input.charAt(pos);
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("[Ss]");
          }
        }
        if (result0 !== null) {
          if (/^[Ee]/.test(input.charAt(pos))) {
            result1 = input.charAt(pos);
            pos++;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("[Ee]");
            }
          }
          if (result1 !== null) {
            if (/^[Tt]/.test(input.charAt(pos))) {
              result2 = input.charAt(pos);
              pos++;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("[Tt]");
              }
            }
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset) { return {type: 'set', code: 0x01}; })(pos0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_add() {
        var result0, result1, result2;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        if (/^[Aa]/.test(input.charAt(pos))) {
          result0 = input.charAt(pos);
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("[Aa]");
          }
        }
        if (result0 !== null) {
          if (/^[Dd]/.test(input.charAt(pos))) {
            result1 = input.charAt(pos);
            pos++;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("[Dd]");
            }
          }
          if (result1 !== null) {
            if (/^[Dd]/.test(input.charAt(pos))) {
              result2 = input.charAt(pos);
              pos++;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("[Dd]");
              }
            }
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset) { return {type: 'add', code: 0x02}; })(pos0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_sub() {
        var result0, result1, result2;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        if (/^[Ss]/.test(input.charAt(pos))) {
          result0 = input.charAt(pos);
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("[Ss]");
          }
        }
        if (result0 !== null) {
          if (/^[Uu]/.test(input.charAt(pos))) {
            result1 = input.charAt(pos);
            pos++;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("[Uu]");
            }
          }
          if (result1 !== null) {
            if (/^[Bb]/.test(input.charAt(pos))) {
              result2 = input.charAt(pos);
              pos++;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("[Bb]");
              }
            }
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset) { return {type: 'sub', code: 0x03}; })(pos0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_mul() {
        var result0, result1, result2;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        if (/^[Mm]/.test(input.charAt(pos))) {
          result0 = input.charAt(pos);
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("[Mm]");
          }
        }
        if (result0 !== null) {
          if (/^[Uu]/.test(input.charAt(pos))) {
            result1 = input.charAt(pos);
            pos++;
          } else {
            result1 = null;
